--- a/src/app/features/layout/main-layout.component.html
+++ b/src/app/features/layout/main-layout.component.html
@@ -1,7 +1,12 @@
 <header class="app-header">
   <a routerLink="/" class="brand">Horizon Projet</a>
   <nav class="spacer"></nav>
-  <button (click)="logout()">Déconnexion</button>
+  <ng-container *ngIf="(currentUser$ | async) as user; else loginBtn">
+    <button (click)="logout()">Déconnexion</button>
+  </ng-container>
+  <ng-template #loginBtn>
+    <button (click)="goLogin()">Connexion</button>
+  </ng-template>
 </header>
 <main class="app-main">
   <router-outlet />
