feat: ajout du gantt et de son export pdf

--- a/src/app/features/projects/project-details/project-details.component.html
+++ b/src/app/features/projects/project-details/project-details.component.html
@@ -1,6 +1,7 @@
 <section *ngIf="project$ | async as project; else loading" class="project-details">
   <header class="header">
     <h2>{{ project.name }}</h2>
+    <a [routerLink]="['/projects', project.id, 'gantt']" class="btn-primary" title="Voir le Gantt">Gantt</a>
   </header>
 
   <div class="info">
